unpackaged/main/default/objects/Loan_Balance__c/Loan_Balance__c.object-meta.xml
<CustomObject>
    <label>Loan Balance</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Loan Balances Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>