unpackaged/main/default/objects/Loan_Balance__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Funder</label>
    <referenceTo>Funder__c</referenceTo>
    <relationshipLabel>Loan Balances</relationshipLabel>
    <relationshipName>Loan_Balances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>